client/sass/index.scss
@import "normalize";
@import 'compass';
@import 'susy';
@import 'breakpoint';

// Constants
@import "./variables";


// Change Susy Default Global Setting
$susy: (
	columns: 12,
	gutters: 1/4,
	math: fluid,
	global-box-sizing: border-box
	);

/* Makes border-box properties */
@include border-box-sizing;

#root {
	background-color: $black_0;
}

.mapApp {
	@include container(1140px);
	@include clearfix; 
}

.mapSelection {
	@include span(8 of 12);
	@include clearfix;
}

.mapSelection_full {
	@extend .mapSelection;
	@include span(full);
}


#main_map {
	height: 600px;
	@include span(full);
	@include clearfix;
}

.fieldSelection {
	@include span(full);
	@include clearfix;
}


.infoBox {
	@include span(4 of 12 last);
	display: none;
	background-color: $black_3;
}

.sentiment-positive {
	border-radius: 12px;
	background: green;
}

.sentiment-negative {
	border-radius: 12px;
	background: red;
}

